--- a/newToDo/src/App.css
+++ b/newToDo/src/App.css
@@ -1,8 +1,30 @@
 .App {
-  padding: 30px;
-  display: flex;
+    padding: 30px;
+    display: flex;
 }
 
 .App > div {
-  margin-right: 50px;
+    margin-right: 50px;
+}
+
+
+.isDone {
+    color: #6994ff;
+    font-weight: bold;
+    text-decoration: line-through;
+}
+
+.bnt-active {
+    color: #ffffff;
+    background-color: #6994ff;
+    border: 2px solid #6994ff;
+}
+
+.error {
+    border: 2px solid red;
+    outline: none;
+}
+
+.error-message {
+    color: red;
 }
